Now a DOM element could have multiple behaviors associated at the same time

--- a/test/fixtures/basic_structure.html
+++ b/test/fixtures/basic_structure.html
@@ -22,7 +22,7 @@
       </a>
     </li>
     <li>
-      <a href="#">
+      <a href="#" data-behavior="multiple1 multiple2">
         <strong>Content5</strong>
       </a>
     </li>
