Test suite: several improvments
	- Allows the usage of context like describe
	- Adds a test helper to keep all the shared logic
	- Adds a lot of missing tests and improves some existent ones

--- a/test/fixtures/single_element.html
+++ b/test/fixtures/single_element.html
@@ -5,3 +5,11 @@
   <li><a href="#">Slide4</a></li>
   <li><a href="#">Slide5</a></li>
 </ul>
+
+<ul id="menu">
+  <li><a href="#">Menu Item</a></li>
+  <li><a href="#">Menu Item</a></li>
+  <li><a href="#">Menu Item</a></li>
+  <li><a href="#">Menu Item</a></li>
+  <li><a href="#">Menu Item</a></li>
+</ul>
