Add basic styling and some layout definitions

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="description" content="Modular and lightweight JavaScript framework">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="stylesheets/normalize.css">
   <link rel="stylesheet" href="stylesheets/main.css">
 </head>
@@ -18,7 +19,32 @@
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
 
-<h1>Essential.js</h1>
+<nav>
+  <ul id="fixed-menu" class="clearfix">
+    <li><a href="#" class="nav-item active">EssentialJS</a></li>
+    <li class="pull-right">
+      <a href="http://github.com/roperzh/essential.js" class="nav-item fa fa-github"></a>
+    </li>
+    <li class="pull-right">
+      <a href="#" class="nav-item">Examples</a>
+    </li>
+    <li class="pull-right">
+      <a href="#" class="nav-item">Docs</a>
+    </li>
+    <li class="pull-right">
+      <a href="#" class="nav-item">Annotated Source</a>
+    </li>
+  </ul>
+</nav>
+
+<header id="presentation">
+  <h1 class="main-title fixed-width">Modular and lightweight JavaScript framework</h1>
+  <section class="download-options">
+    <button class="button">Download <i class="fa fa-download"></i></button>
+    <button class="button">Get with bower</button>
+  </section>
+  <span class="arrow-down"></span>
+</header>
 
 <script src="javascripts/main.js"></script>
 
