--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <a href="#" class="nav-item">Docs</a>
     </li>
     <li class="pull-right">
-      <a href="/docs" class="nav-item">Annotated Source</a>
+      <a href="docs" class="nav-item">Annotated Source</a>
     </li>
   </ul>
 </nav>
@@ -52,8 +52,23 @@
       <li><i class="fa fa-angle-right"></i>Well tested</li>
     </ul>
   </section>
-  <span class="arrow-down"></span>
 </header>
+
+<div class="container">
+  <div class="separator"><h5>Overview</h5></div>
+  <p style="width: 40%; display: inline-block;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+  <pre style="width: 40%;">
+    <code>
+      Essential.start()
+    </code>
+  </pre>
+</div>
 
 <script src="javascripts/highlight.js"></script>
 <script src="javascripts/main.js"></script>
