--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
 
 <div class="container">
   <div class="separator"><h5>Overview</h5></div>
-  <p style="width: 40%; display: inline-block;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  <p class="column half-width">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
   consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
   cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
   proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-  <pre style="width: 40%;">
+  <pre class="column half-width">
     <code>
       Essential.start()
     </code>
