Little tweaks to fit responsive design

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <a href="#" class="nav-item">Docs</a>
     </li>
     <li class="pull-right">
-      <a href="docs" class="nav-item">Annotated Source</a>
+      <a href="docs" class="nav-item hidden-mobile">Annotated Source</a>
     </li>
   </ul>
 </nav>
